Test cases for PriorityQueue

--- a/NOCoreTest/NOCoreTest.csproj
+++ b/NOCoreTest/NOCoreTest.csproj
@@ -54,6 +54,8 @@
     <Compile Include="TestSubEdge.cs" />
     <Compile Include="TestSubNode.cs" />
     <Compile Include="UnitTest1.cs" />
+    <Compile Include="PriorityQueueTest.cs" />
+    <Compile Include="TestEdgeClass.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
