--- a/NOCoreForFramework/NOCoreForFramework.csproj
+++ b/NOCoreForFramework/NOCoreForFramework.csproj
@@ -48,6 +48,7 @@
     <Compile Include="IEdge.cs" />
     <Compile Include="IGraph.cs" />
     <Compile Include="INode.cs" />
+    <Compile Include="KShortestPath.cs" />
     <Compile Include="Node.cs" />
     <Compile Include="IndexGenerator.cs" />
     <Compile Include="Path.cs" />
