--- a/NOCoreTest/NOCoreTest.csproj
+++ b/NOCoreTest/NOCoreTest.csproj
@@ -56,6 +56,7 @@
     <Compile Include="KShortestPathTest.cs" />
     <Compile Include="PriorityQueueTest.cs" />
     <Compile Include="TestEdgeClass.cs" />
+    <Compile Include="TestNodeClass.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
