--- a/NOCoreForFramework/NOCoreForFramework.csproj
+++ b/NOCoreForFramework/NOCoreForFramework.csproj
@@ -41,6 +41,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="AllPaths.cs" />
     <Compile Include="Dijkstra.cs" />
     <Compile Include="Edge.cs" />
     <Compile Include="Graph.cs" />
@@ -54,6 +55,7 @@
     <Compile Include="Route.cs" />
     <Compile Include="PriorityQueue.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="State.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
