Implemented Extendable Node and Edge. Implemented Interfaces ICriterion and Several Generic Criteria. Implemented Interface IConstrainable. Implemented Generic Constraint. Revised the Algorithms to work with new Extendable Node and Edge.

--- a/NOCoreTest/NOCoreTest.csproj
+++ b/NOCoreTest/NOCoreTest.csproj
@@ -48,6 +48,8 @@
     <Reference Include="System.Core" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="BasicConstraint.cs" />
+    <Compile Include="BasicEdge.cs" />
     <Compile Include="GraphTest.cs" />
     <Compile Include="GraphXMLTest.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
