--- a/NOCoreForFramework/NOCoreForFramework.csproj
+++ b/NOCoreForFramework/NOCoreForFramework.csproj
@@ -41,21 +41,28 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="AllPaths.cs" />
-    <Compile Include="Dijkstra.cs" />
+    <Compile Include="Algorithms\AllPaths.cs" />
+    <Compile Include="Criteria\EqualCriterion.cs" />
+    <Compile Include="Algorithms\Dijkstra.cs" />
     <Compile Include="Edge.cs" />
+    <Compile Include="Constraint.cs" />
     <Compile Include="Graph.cs" />
     <Compile Include="GraphXML.cs" />
+    <Compile Include="Criteria\GreaterThanCriterion.cs" />
+    <Compile Include="IConstrainable.cs" />
+    <Compile Include="Criteria\ICriterion.cs" />
     <Compile Include="IEdge.cs" />
     <Compile Include="IGraph.cs" />
     <Compile Include="INode.cs" />
-    <Compile Include="KShortestPath.cs" />
+    <Compile Include="Algorithms\KShortestPath.cs" />
+    <Compile Include="Criteria\LessThanCriterion.cs" />
     <Compile Include="Node.cs" />
-    <Compile Include="IndexGenerator.cs" />
+    <Compile Include="Utils\IndexGenerator.cs" />
     <Compile Include="Route.cs" />
-    <Compile Include="PriorityQueue.cs" />
+    <Compile Include="Utils\PriorityQueue.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="State.cs" />
+    <Compile Include="Criteria\RangeCriterion.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
