Fixed Route Equality Comparer bug. Documented IEdge, Node.

--- a/NOCoreTest/NOCoreTest.csproj
+++ b/NOCoreTest/NOCoreTest.csproj
@@ -62,6 +62,7 @@
     <Compile Include="TestEdgeClass.cs" />
     <Compile Include="TestNodeClass.cs" />
     <Compile Include="TestForRouteClass.cs" />
+    <Compile Include="RouteTest.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\NOCoreForFramework\NOCoreForFramework.csproj">
