--- a/NOCoreForFramework/NOCoreForFramework.csproj
+++ b/NOCoreForFramework/NOCoreForFramework.csproj
@@ -61,10 +61,10 @@
     <Compile Include="Node.cs" />
     <Compile Include="Utils\ConnectivityObserver.cs" />
     <Compile Include="Utils\IdGenerator.cs" />
-    <Compile Include="Route.cs" />
+    <Compile Include="Utils\Route.cs" />
     <Compile Include="Utils\PriorityQueue.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="State.cs" />
+    <Compile Include="Utils\State.cs" />
     <Compile Include="Criteria\RangeCriterion.cs" />
     <Compile Include="Algorithms\WorstCases.cs" />
   </ItemGroup>
