Created new test cases for AllPaths, Constraint, and all of the Criterion type.

--- a/NOCoreTest/NOCoreTest.csproj
+++ b/NOCoreTest/NOCoreTest.csproj
@@ -63,6 +63,9 @@
     <Compile Include="TestNodeClass.cs" />
     <Compile Include="TestForRouteClass.cs" />
     <Compile Include="RouteTest.cs" />
+    <Compile Include="AllPathsTest.cs" />
+    <Compile Include="ConstraintTest.cs" />
+    <Compile Include="CriteriaTest.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\NOCoreForFramework\NOCoreForFramework.csproj">
