--- a/NOCoreForFramework/NOCoreForFramework.csproj
+++ b/NOCoreForFramework/NOCoreForFramework.csproj
@@ -47,7 +47,7 @@
     <Compile Include="Criteria\EqualCriterion.cs" />
     <Compile Include="Algorithms\Dijkstra.cs" />
     <Compile Include="Edge.cs" />
-    <Compile Include="Criteria\Constraint.cs" />
+    <Compile Include="Constraint.cs" />
     <Compile Include="Graph.cs" />
     <Compile Include="GraphXML.cs" />
     <Compile Include="Criteria\GreaterThanCriterion.cs" />
