--- a/NOCoreForFramework/NOCoreForFramework.csproj
+++ b/NOCoreForFramework/NOCoreForFramework.csproj
@@ -60,7 +60,8 @@
     <Compile Include="Criteria\LessThanCriterion.cs" />
     <Compile Include="Node.cs" />
     <Compile Include="Utils\AttributePair.cs" />
-    <Compile Include="Utils\ConnectivityObserver.cs" />
+    <Compile Include="ConnectivityObserver.cs" />
+    <Compile Include="Utils\FromToThrough.cs" />
     <Compile Include="Utils\IdGenerator.cs" />
     <Compile Include="Utils\Route.cs" />
     <Compile Include="Utils\PriorityQueue.cs" />
