--- a/NOCoreForFramework/NOCoreForFramework.csproj
+++ b/NOCoreForFramework/NOCoreForFramework.csproj
@@ -51,6 +51,7 @@
     <Compile Include="Graph.cs" />
     <Compile Include="GraphXML.cs" />
     <Compile Include="Criteria\GreaterThanCriterion.cs" />
+    <Compile Include="IConnection.cs" />
     <Compile Include="IConstrainable.cs" />
     <Compile Include="Criteria\ICriterion.cs" />
     <Compile Include="IEdge.cs" />
